# emoji-converter

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  test.yml
emoji_converter/: __init__.py  converter.py
tests/: test.py
