[tool.poetry]
name = "emoji-converter"
version = "0.1.0"
description = ""
authors = ["Le Xuan Manh <lexuanmanh101199@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
emoji = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
